--- a/frontend/pages/admin.html
+++ b/frontend/pages/admin.html
@@ -15,7 +15,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="../public//vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +40,8 @@
 <body class="about-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+    <div
+      class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
@@ -46,7 +49,7 @@
         <h1 class="sitename">WordlAgency</h1>
       </a>
 
-       <nav id="navmenu" class="navmenu">
+      <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
           <li><a href="/pages/about.html">Sobre Nosotros</a></li>
@@ -57,7 +60,8 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
+      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span
+          class="badge bg-danger">2</span></a>
 
       <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
 
@@ -67,7 +71,8 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url(/assets/img/travel/showcase-8.webp);">
+    <div class="page-title dark-background" data-aos="fade"
+      style="background-image: url(/assets/img/travel/showcase-8.webp);">
       <div class="container position-relative">
         <h1>Admin Dashboard</h1>
         <p>Manage your platform's users, tours, destinations, and more.</p>
@@ -339,7 +344,8 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
@@ -364,28 +370,6 @@
       const allManagementViews = document.querySelectorAll('.management-view');
       const actionButtons = document.querySelectorAll('[data-view]');
       const backButton = document.querySelector('.btn-back-to-dashboard');
-
-      // --- API Call Placeholder Functions ---
-      // As requested, these functions simulate fetching data from a backend API.
-      // In a real application, you would replace these with actual `fetch` calls.
-
-      /**
-       * Fetches a list of users from the backend.
-       * This is a placeholder for an API call.
-       */
-      function fetchUsers() {
-        console.log('Fetching users from the API...');
-        // Example: return fetch('/api/v1/users').then(res => res.json());
-      }
-
-      /**
-       * Fetches a list of tours from the backend.
-       * This is a placeholder for an API call.
-       */
-      function fetchTours() {
-        console.log('Fetching tours from the API...');
-        // Example: return fetch('/api/v1/tours').then(res => res.json());
-      }
 
       // --- View Switching Logic ---
 
@@ -420,6 +404,7 @@
       });
     });
   </script>
+  <script type="module" src="../src/controllers/AdminController.js"></script>
 
 </body>
 
