--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -8,14 +8,16 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
 
-<!-- Favicons -->
+  <!-- Favicons -->
   <link href="../assets/img/favicon.png" rel="icon">
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="../public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +41,8 @@
 <body class="destinations-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+    <div
+      class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
@@ -47,7 +50,7 @@
         <h1 class="sitename">WordlAgency</h1>
       </a>
 
-       <nav id="navmenu" class="navmenu">
+      <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
           <li><a href="/pages/about.html">Sobre Nosotros</a></li>
@@ -58,7 +61,8 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
+      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span
+          class="badge bg-danger">2</span></a>
 
       <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
 
@@ -83,7 +87,8 @@
           <div class="col-lg-7">
             <div class="hero-text" data-aos="fade-up" data-aos-delay="100">
               <h1 class="hero-title">Inicia Sesión Para Disfrutar Tu Viaje</h1>
-              <p class="hero-subtitle">Descubre muchas actividades para hacer y compartir con las personas que más amas.</p>
+              <p class="hero-subtitle">Descubre muchas actividades para hacer y compartir con las personas que más amas.
+              </p>
               <div class="hero-buttons">
                 <a href="#" class="btn btn-primary me-3">Destinos</a>
                 <a href="#" class="btn btn-outline">Tours</a>
@@ -93,26 +98,26 @@
 
           <div class="col-lg-5">
             <div class="booking-form-wrapper" data-aos="fade-left" data-aos-delay="200">
-                <div class="booking-form">
-                    <h3 class="form-title">Iniciar Sesión</h3>
-                        <div class="form-group mb-3">
-                            <label for="correo">Correo</label>
-                            <input type="email" name="correo" id="correo" class="form-control" required="">
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="contrasena">Contraseña</label>
-                            <input type="password" name="contrasena" id="contrasena" class="form-control" required="">
-                        </div>
-                        <button type="submit" class="btn btn-primary w-100">Ingresar</button>
-                    </form>
+              <div class="booking-form">
+                <h3 class="form-title">Iniciar Sesión</h3>
+                <div class="form-group mb-3">
+                  <label for="correo">Correo</label>
+                  <input type="email" name="correo" id="correo" class="form-control" required="">
                 </div>
+                <div class="form-group mb-3">
+                  <label for="contrasena">Contraseña</label>
+                  <input type="password" name="contrasena" id="contrasena" class="form-control" required="">
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Ingresar</button>
+                </form>
+              </div>
             </div>
           </div>
         </div>
       </div>
 
     </section><!-- /Travel Hero Section -->
-    
+
 
   </main>
 
@@ -169,7 +174,8 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
@@ -186,6 +192,7 @@
 
   <!-- Main JS File -->
   <script src="../public/js/main.js"></script>
+  <script type="module" src="../src/controllers/AuthController.js"></script>
 
 </body>
 
